deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zenic-flujo
  labels:
    name: zenic-flujo
    pod-security.kubernetes.io/enforce: restricted
    istio-injection: enabled
